# silc

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  DESIGN.md  Dockerfile  Implementation_plan.md  LICENSE  README.md  build.py  build.spec  build_pyz.py  build_tui.sh  docker-compose.yml  hatch_build.py  install.bat  install.sh  main.py  pyproject.toml  todo.md
agent_chat/: Anubis_Findings_2026_02_22.md  Hathor_Ideas_2026_02_22.md  Osiris_Judgment_2026_02_22.md  manager-web-ui-2026-02-21.md  named-sessions-2025-02-21.md  plan_daemon_lifecycle_commands_2026-02-22.md  plan_timing_fixes_2026_02_22.md  preview-no-resize-2025-02-22.md  resize-unify-2025-02-21.md  restart-server-2026-02-21.md  resurrect-2025-02-21.md  signal-buttons-2026-02-22.md
docs/: ARCH.md  DESIGN.md  DOCUMENTATION_GAPS.md  Implementation_plan.md  arch_api.md  arch_cli.md  arch_core.md  arch_daemon.md  arch_index.md  arch_mcp.md  arch_stream.md  arch_tui.md  arch_webui.md  architecture.md  commands.md  commands_and_api.md  configuration.md  daemon.md  getting-started.md  glossary.md  product.md  proposals.md  pty.md  silc.toml.example  todo.md
examples/: README.md  github_actions.yml  llm_integration.py  monitoring_dashboard.html  python_integration.py
manager_web_ui/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
manual_tests/: QUICKSTART.md  README.md  cli_process_test.py  full_process.py  full_process_manual.py  integration_test.py  manual_flow.py  new_process_test.py  process_script.py  process_test.py  (+7 more)
tui_client/: Cargo.toml  main.rs
(+79 files in other folders)
