[project]
name = "silc"
version = "0.1.0"
description = "Shared interactive linked command that lets agents and humans peer into the same shell."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "textual>=0.44.0",
    "click>=8.1.7",
    "psutil>=5.9.6",
    "requests>=2.31.0",
    "platformdirs>=3.11.0",
    "pywinpty>=3.0.2; sys_platform == 'win32'",
    "pytest-asyncio>=1.3.0",
    "pip>=25.3",
    "pytest>=9.0.2",
    "pyinstaller>=6.17.0",
    "par-term-emu-core-rust>=0.20.0",
    "black>=26.1.0",
    "websockets>=12.0",
    "httpx>=0.28.1",
]

[project.scripts]
silc = "silc.__main__:main"

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.22.0",
]

[tool.hatch.build.targets.wheel]
packages = ["silc"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
