[package]
name = "silc_tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "silc-tui"
path = "main.rs"

[dependencies]
crossterm = "0.27"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28"
ureq = "2"
url = "2"
